Added links to some of menu items

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <input type="checkbox" name="checkbox" id="checkbox" class="nav-input" />
 
       <ul class="menu">
-        <li><a href="">home</a></li>
-        <li><a href="">about</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="#About">about</a></li>
         <li><a href="">contact</a></li>
         <li><a href="">log in</a></li>
         <li><a href="">sign in</a></li>
@@ -124,7 +124,7 @@
           </aside>
         </div>
       </section>
-      <section class="bg-footer">
+      <section class="bg-footer" id="About">
         <div class="footer padding">
           <h2 class="footer-h2">Just scratching the surface</h2>
           <div class="four-col-div">
